# ChangeLog for media-video/recordmydesktop
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/recordmydesktop/ChangeLog,v 1.24 2009/01/14 16:57:02 fauli Exp $

*recordmydesktop-0.3.8.1 (14 Jan 2009)

  14 Jan 2009; Christian Faulhammer <fauli@gentoo.org>
  +recordmydesktop-0.3.8.1.ebuild:
  version bump, fixes bug 254418 * port to EAPI=2 (built_with_use) * remove
  die messages * fix HOMEPAGE entry

  05 May 2008; Olivier Crête <tester@gentoo.org>
  recordmydesktop-0.3.7.3.ebuild:
  Stable on amd64

  20 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
  -recordmydesktop-0.3.6.ebuild:
  clean up

  07 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
  recordmydesktop-0.3.7.3.ebuild:
  stable x86

*recordmydesktop-0.3.7.3 (20 Feb 2008)

  20 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  -recordmydesktop-0.3.7.1.ebuild, -recordmydesktop-0.3.7.2.ebuild,
  +recordmydesktop-0.3.7.3.ebuild:
  version bump and clean up; only a crash issue with xcb

*recordmydesktop-0.3.7.2 (06 Feb 2008)

  06 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  +recordmydesktop-0.3.7.2.ebuild:
  version bump

*recordmydesktop-0.3.7.1 (26 Jan 2008)

  26 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  +recordmydesktop-0.3.7.1.ebuild:
  version bump, bug 207142

  12 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  recordmydesktop-0.3.6.ebuild:
  stable x86

  23 Oct 2007; Alexis Ballier <aballier@gentoo.org>
  -recordmydesktop-0.3.5.1.ebuild:
  remove old version

  09 Oct 2007; Alexis Ballier <aballier@gentoo.org>
  recordmydesktop-0.3.5.1.ebuild:
  fix homepage for remaining ebuild

  09 Oct 2007; Alexis Ballier <aballier@gentoo.org>
  -recordmydesktop-0.3.3.1.ebuild, -recordmydesktop-0.3.4.ebuild:
  cleanup old versions

*recordmydesktop-0.3.6 (09 Oct 2007)

  09 Oct 2007; Alexis Ballier <aballier@gentoo.org>
  +recordmydesktop-0.3.6.ebuild:
  version bump, fix homepage, bug #195273
