@@ -4,13 +4,13 @@ Hash: SHA1
 DIST recordmydesktop-0.3.7.3.tar.gz 186550 RMD160 b5919c595be3dce2947cbac769fa9365c4d03dde SHA1 0b3603f862eab714ae17c554992f37a6f9f118b7 SHA256 2bfdfc85d030ac2091aaa60ab88d8768274eb08bca896b84c4c8e5453d066b76
 DIST recordmydesktop-0.3.8.1.tar.gz 198732 RMD160 a942e16ab9714861010a34a921f8b2127792bd29 SHA1 4be18baa70da88a7f228591057f2e7ff51b31de4 SHA256 33a2e208186ae78e2db2a27b0f5047b50fb7819c47fe15483b0765200b9d738c
 EBUILD recordmydesktop-0.3.7.3.ebuild 1238 RMD160 d017932980464f9622abdc85cb906130a11a3aea SHA1 69b28a57604690b3fb6436de1292c8079844d57a SHA256 c7374ca2e906f2e611b927e73ff1fa6e4727777d5226b46d95aac67b0e04cf2a
-EBUILD recordmydesktop-0.3.8.1.ebuild 949 RMD160 9264e635c16db2d66e3e37997911ddac03d7e27e SHA1 e1042ac46dd3b2fc1217ee2c6b99916d5b52e289 SHA256 6bfaafbb5bfe6bcaf14f1f84ec350f027c18dc79d816e7ec0e0cd333db6e01fd
-MISC ChangeLog 3856 RMD160 a4b05a46b18245469b8b35e0a88b52f18398c568 SHA1 6967ec099c898300dcd6e615558ef0967e72d96a SHA256 d9467f3445a568483596fac7a7c1d92ec9e3f0d901a35f2445e37e499b4f4eb8
+EBUILD recordmydesktop-0.3.8.1.ebuild 933 RMD160 1a4ab06cdce52c840786193016f920e8122f341d SHA1 6483ee2c46ce12cdfe2842e4559b68abbb72a19c SHA256 bec5e8b3c5f8e1cd5b5fabd49e3d066405dc6e4a141e4ef1e7d6330157e73bde
+MISC ChangeLog 3967 RMD160 e90adfa718ff0dc93e1c6a06c04ef62373d19e9d SHA1 bfe0dce25d202a90e7a00c5d3c52b9b019ba96d9 SHA256 c4fefac3ef4c095ca9d1468a80ecbe70bdf7362843426c19db0263f8ce456cd1
 MISC metadata.xml 226 RMD160 9acecdf92471eb50a25bc1aaf0d5179959d6d211 SHA1 f66369c7e7900801781a598bf5a7e6e49803a801 SHA256 b159adc5c7076105f4bc05f02d3c1e12bcad82faedf5df5ba4888077732ebf64
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluGXgACgkQNQqtfCuFneOKjACggePpj6ivHig9nuxiZWzmJIz4
-9JEAniFv+7WQ0mxf7IUaROKLrvA2i1Af
-=Iv6q
+iEYEARECAAYFAkluMnAACgkQvFcC4BYPU0peHACeMsA1E3npySzEx6dOJQJrjor6
+uBoAoKcTQZRhCpBMLMlZdWLImTWfD6Qj
+=jDeM
 -----END PGP SIGNATURE-----
