@@ -1,6 +1,10 @@
 # ChangeLog for media-video/recordmydesktop
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/recordmydesktop/ChangeLog,v 1.24 2009/01/14 16:57:02 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/recordmydesktop/ChangeLog,v 1.25 2009/01/14 18:43:54 aballier Exp $
+
+  14 Jan 2009; Alexis Ballier <aballier@gentoo.org>
+  recordmydesktop-0.3.8.1.ebuild:
+  avoid double econf
 
 *recordmydesktop-0.3.8.1 (14 Jan 2009)
 
